Functions of Supermarket Finished with Tests feature-peixis-supermarket