@@ -270,60 +270,33 @@ public class SupermarketTest {
     @Test
     public void testAddShelvingUnit() {
         supermarket.createDistribution(2, distribution); // Create initial distribution for the test
+        int initialSize = supermarket.getShelvingUnits().size();
         supermarket.logOut();
         supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
         try {
-            int initialSize = supermarket.getShelvingUnits().size();
             supermarket.addShelvingUnit(initialSize - 1, ProductTemperature.AMBIENT);
-            List<ShelvingUnit> shelvingUnits = supermarket.getShelvingUnits();
-            assertEquals("The number of shelving units should increase by 1", initialSize + 1, shelvingUnits.size());
-            ShelvingUnit addedUnit = shelvingUnits.get(shelvingUnits.size() - 1);
-            assertEquals("The shelving unit height should be 2", 2, addedUnit.getHeight());
-            assertEquals("The shelving unit temperature should be AMBIENT", ProductTemperature.AMBIENT, addedUnit.getTemperature());
-            for (int i = 0; i < shelvingUnits.size() - 1; i++) {
-                assertNotEquals("The new shelving unit's uid should be unique", shelvingUnits.get(i).getUid(), addedUnit.getUid());
-            }
             fail("Expected IllegalStateException, the current user is not an administrator.");
         } catch (IllegalStateException e) {
             assertEquals("The logged in user is not admin.", e.getMessage());
         }
         supermarket.logOut();
         try {
-            int initialSize = supermarket.getShelvingUnits().size();
             supermarket.addShelvingUnit(initialSize - 1, ProductTemperature.AMBIENT);
-            List<ShelvingUnit> shelvingUnits = supermarket.getShelvingUnits();
-            assertEquals("The number of shelving units should increase by 1", initialSize + 1, shelvingUnits.size());
-            ShelvingUnit addedUnit = shelvingUnits.get(shelvingUnits.size() - 1);
-            assertEquals("The shelving unit height should be 2", 2, addedUnit.getHeight());
-            assertEquals("The shelving unit temperature should be AMBIENT", ProductTemperature.AMBIENT, addedUnit.getTemperature());
-            for (int i = 0; i < shelvingUnits.size() - 1; i++) {
-                assertNotEquals("The new shelving unit's uid should be unique", shelvingUnits.get(i).getUid(), addedUnit.getUid());
-            }
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("There is no logged in user.", e.getMessage());
         }
         supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
         try {
-            int initialSize = supermarket.getShelvingUnits().size();
             supermarket.addShelvingUnit(- 1, ProductTemperature.AMBIENT);
-            List<ShelvingUnit> shelvingUnits = supermarket.getShelvingUnits();
-            assertEquals("The number of shelving units should increase by 1", initialSize + 1, shelvingUnits.size());
-            ShelvingUnit addedUnit = shelvingUnits.get(- 1);
-            assertEquals("The shelving unit height should be 2", 2, addedUnit.getHeight());
-            assertEquals("The shelving unit temperature should be AMBIENT", ProductTemperature.AMBIENT, addedUnit.getTemperature());
-            for (int i = 0; i < shelvingUnits.size() - 1; i++) {
-                assertNotEquals("The new shelving unit's uid should be unique", shelvingUnits.get(i).getUid(), addedUnit.getUid());
-            }
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
         }
-        int initialSize = supermarket.getShelvingUnits().size();
         supermarket.addShelvingUnit(initialSize - 1, ProductTemperature.AMBIENT);
         List<ShelvingUnit> shelvingUnits = supermarket.getShelvingUnits();
         assertEquals("The number of shelving units should increase by 1", initialSize + 1, shelvingUnits.size());
-        ShelvingUnit addedUnit = shelvingUnits.get(shelvingUnits.size() - 1);
+        ShelvingUnit addedUnit = shelvingUnits.getLast();
         assertEquals("The shelving unit height should be 2", 2, addedUnit.getHeight());
         assertEquals("The shelving unit temperature should be AMBIENT", ProductTemperature.AMBIENT, addedUnit.getTemperature());
         for (int i = 0; i < shelvingUnits.size() - 1; i++) {
@@ -334,13 +307,12 @@ public class SupermarketTest {
     @Test
     public void testRemoveShelvingUnit() {
         supermarket.createDistribution(2, distribution);
+        int initialSize = supermarket.getShelvingUnits().size();
         supermarket.logOut();
         supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
         try {
-            int initialSize = supermarket.getShelvingUnits().size();
             supermarket.addShelvingUnit(initialSize, ProductTemperature.AMBIENT);
             supermarket.deleteShelvingUnit(initialSize);
-            assertEquals("The Shelving unit did not delete correctly", initialSize, supermarket.getShelvingUnits().size());
             supermarket.deleteShelvingUnit(1);
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
@@ -348,10 +320,8 @@ public class SupermarketTest {
         }
         supermarket.logOut();
         try {
-            int initialSize = supermarket.getShelvingUnits().size();
             supermarket.addShelvingUnit(initialSize, ProductTemperature.AMBIENT);
             supermarket.deleteShelvingUnit(initialSize);
-            assertEquals("The Shelving unit did not delete correctly", initialSize, supermarket.getShelvingUnits().size());
             supermarket.deleteShelvingUnit(1);
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
@@ -359,17 +329,11 @@ public class SupermarketTest {
         }
         supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
         try {
-            int initialSize = supermarket.getShelvingUnits().size();
-            supermarket.addShelvingUnit(initialSize, ProductTemperature.AMBIENT);
-            supermarket.deleteShelvingUnit(initialSize);
-            assertEquals("The Shelving unit did not delete correctly", initialSize, supermarket.getShelvingUnits().size());
             supermarket.deleteShelvingUnit(-1);
-            assertEquals("The Shelving unit did not delete correctly", initialSize - 1, supermarket.getShelvingUnits().size());
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
         }
-        int initialSize = supermarket.getShelvingUnits().size();
         supermarket.addShelvingUnit(initialSize, ProductTemperature.AMBIENT);
         supermarket.deleteShelvingUnit(initialSize);
         assertEquals("The Shelving unit did not delete correctly", initialSize, supermarket.getShelvingUnits().size());
@@ -380,66 +344,41 @@ public class SupermarketTest {
     @Test
     public void testAddProductToShelvingUnit() {
         supermarket.createDistribution(2, distribution);
+        int tot_prod = supermarket.getAllProductsShelvingUnits().size();
         supermarket.logOut();
         supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
         try {
-            int tot_prod = supermarket.getAllProductsShelvingUnits().size();
             supermarket.addProductToShelvingUnit(1,0, product1);
-            assertEquals("The product was not added to the shelving unit", tot_prod + 1, supermarket.getAllProductsShelvingUnits().size());
-            assertEquals("The product was not added to the shelving unit", product1, supermarket.getShelvingUnits().get(1).getProduct(0));
-            supermarket.addProductToShelvingUnit(1,0, product2);
-            assertEquals("The product was not added to the shelving unit", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("The logged in user is not admin.", e.getMessage());
         }
         supermarket.logOut();
         try {
-            int tot_prod = supermarket.getAllProductsShelvingUnits().size();
             supermarket.addProductToShelvingUnit(1,0, product1);
-            assertEquals("The product was not added to the shelving unit", tot_prod + 1, supermarket.getAllProductsShelvingUnits().size());
-            assertEquals("The product was not added to the shelving unit", product1, supermarket.getShelvingUnits().get(1).getProduct(0));
-            supermarket.addProductToShelvingUnit(1,0, product2);
-            assertEquals("The product was not added to the shelving unit", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("There is no logged in user.", e.getMessage());
         }
         supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
         try {
-            int tot_prod = supermarket.getAllProductsShelvingUnits().size();
             supermarket.addProductToShelvingUnit(-1,0, product1);
-            assertEquals("The product was not added to the shelving unit", tot_prod + 1, supermarket.getAllProductsShelvingUnits().size());
-            assertEquals("The product was not added to the shelving unit", product1, supermarket.getShelvingUnits().get(1).getProduct(0));
-            supermarket.addProductToShelvingUnit(1,0, product2);
-            assertEquals("The product was not added to the shelving unit", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
         }
         try {
-            int tot_prod = supermarket.getAllProductsShelvingUnits().size();
             supermarket.addProductToShelvingUnit(1,10, product1);
-            assertEquals("The product was not added to the shelving unit", tot_prod + 1, supermarket.getAllProductsShelvingUnits().size());
-            assertEquals("The product was not added to the shelving unit", product1, supermarket.getShelvingUnits().get(1).getProduct(0));
-            supermarket.addProductToShelvingUnit(1,10, product2);
-            assertEquals("The product was not added to the shelving unit", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IndexOutOfBoundsException e) {
             assertEquals(("Invalid height: 10"), e.getMessage());
         }
         try {
-            int tot_prod = supermarket.getAllProductsShelvingUnits().size();
             supermarket.addProductToShelvingUnit(1,0, null);
-            assertEquals("The product was not added to the shelving unit", tot_prod + 1, supermarket.getAllProductsShelvingUnits().size());
-            assertEquals("The product was not added to the shelving unit", product1, supermarket.getShelvingUnits().get(1).getProduct(0));
-            supermarket.addProductToShelvingUnit(1,1, product2);
-            assertEquals("The product was not added to the shelving unit", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (NullPointerException e) {
             assertEquals("Product cannot be null.", e.getMessage());
         }
-        int tot_prod = supermarket.getAllProductsShelvingUnits().size();
         supermarket.addProductToShelvingUnit(1,0, product1);
         assertEquals("The product was not added to the shelving unit", tot_prod + 1, supermarket.getAllProductsShelvingUnits().size());
         assertEquals("The product was not added to the shelving unit", product1, supermarket.getShelvingUnits().get(1).getProduct(0));
@@ -450,58 +389,37 @@ public class SupermarketTest {
     @Test
     public void testDeleteProductFromShelvingUnit() {
         supermarket.createDistribution(2, distribution);
+        supermarket.addProductToShelvingUnit(1,0, product1);
+        List<Product> x = supermarket.getShelvingUnits().get(1).getProducts();
+        supermarket.addProductToShelvingUnit(1,1, product2);
         supermarket.logOut();
         supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            List<Product> x = supermarket.getShelvingUnits().get(1).getProducts();
-            supermarket.addProductToShelvingUnit(1,1, product2);
             supermarket.deleteProductFromShelvingUnit(1, 1);
-            assertEquals("The product was not deleted", x, supermarket.getShelvingUnits().get(1).getProducts());
-            assertNull("The product was not deleted", supermarket.getShelvingUnits().get(1).getProducts().get(1));
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("The logged in user is not admin.", e.getMessage());
         }
         supermarket.logOut();
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            List<Product> x = supermarket.getShelvingUnits().get(1).getProducts();
-            supermarket.addProductToShelvingUnit(1,1, product2);
             supermarket.deleteProductFromShelvingUnit(1, 1);
-            assertEquals("The product was not deleted", x, supermarket.getShelvingUnits().get(1).getProducts());
-            assertNull("The product was not deleted", supermarket.getShelvingUnits().get(1).getProducts().get(1));
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("There is no logged in user.", e.getMessage());
         }
         supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            List<Product> x = supermarket.getShelvingUnits().get(1).getProducts();
-            supermarket.addProductToShelvingUnit(1,1, product2);
             supermarket.deleteProductFromShelvingUnit(10, 1);
-            assertEquals("The product was not deleted", x, supermarket.getShelvingUnits().get(1).getProducts());
-            assertNull("The product was not deleted", supermarket.getShelvingUnits().get(1).getProducts().get(1));
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
         }
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            List<Product> x = supermarket.getShelvingUnits().get(1).getProducts();
-            supermarket.addProductToShelvingUnit(1,1, product2);
             supermarket.deleteProductFromShelvingUnit(1, 10);
-            assertEquals("The product was not deleted", x, supermarket.getShelvingUnits().get(1).getProducts());
-            assertNull("The product was not deleted", supermarket.getShelvingUnits().get(1).getProducts().get(1));
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IndexOutOfBoundsException e) {
             assertEquals(("Invalid height: 10"), e.getMessage());
         }
-
-        supermarket.addProductToShelvingUnit(1,0, product1);
-        List<Product> x = supermarket.getShelvingUnits().get(1).getProducts();
-        supermarket.addProductToShelvingUnit(1,1, product2);
         supermarket.deleteProductFromShelvingUnit(1, 1);
         assertEquals("The product was not deleted", x, supermarket.getShelvingUnits().get(1).getProducts());
         assertNull("The product was not deleted", supermarket.getShelvingUnits().get(1).getProducts().get(1));
@@ -534,52 +452,36 @@ public class SupermarketTest {
     @Test
     public void testSwapProducts() {
         supermarket.createDistribution(2, distribution);
+        supermarket.addProductToShelvingUnit(1,0, product1);
+        supermarket.addProductToShelvingUnit(2,1, product2);
         supermarket.logOut();
         supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
             supermarket.swapProducts(1,0, 2, 1);
-            assertEquals("The products were not swapped", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
-            assertEquals("The products were not swapped", product1, supermarket.getShelvingUnits().get(2).getProduct(1));
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("The logged in user is not admin.", e.getMessage());
         }
         supermarket.logOut();
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
             supermarket.swapProducts(1,0, 2, 1);
-            assertEquals("The products were not swapped", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
-            assertEquals("The products were not swapped", product1, supermarket.getShelvingUnits().get(2).getProduct(1));
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("There is no logged in user.", e.getMessage());
         }
         supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
             supermarket.swapProducts(1,0, -2, 1);
-            assertEquals("The products were not swapped", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
-            assertEquals("The products were not swapped", product1, supermarket.getShelvingUnits().get(2).getProduct(1));
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
         }
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
             supermarket.swapProducts(1,0, 2, 10);
-            assertEquals("The products were not swapped", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
-            assertEquals("The products were not swapped", product1, supermarket.getShelvingUnits().get(2).getProduct(1));
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IndexOutOfBoundsException e) {
             assertEquals(("Invalid height: 10"), e.getMessage());
         }
-        supermarket.addProductToShelvingUnit(1,0, product1);
-        supermarket.addProductToShelvingUnit(2,1, product2);
         supermarket.swapProducts(1,0, 2, 1);
         assertEquals("The products were not swapped", product2, supermarket.getShelvingUnits().get(1).getProduct(0));
         assertEquals("The products were not swapped", product1, supermarket.getShelvingUnits().get(2).getProduct(1));
@@ -588,62 +490,38 @@ public class SupermarketTest {
     @Test
     public void testSwapShelvingUnits() {
         supermarket.createDistribution(2, distribution);
+        supermarket.addProductToShelvingUnit(1,0, product1);
+        supermarket.addProductToShelvingUnit(2,1, product2);
+        ShelvingUnit u1 = supermarket.getShelvingUnits().get(1);
+        ShelvingUnit u2 = supermarket.getShelvingUnits().get(2);
         supermarket.logOut();
         supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
-            ShelvingUnit u1 = supermarket.getShelvingUnits().get(1);
-            ShelvingUnit u2 = supermarket.getShelvingUnits().get(2);
             supermarket.swapShelvingUnits(1, 2);
-            assertEquals("The shelving units were not swapped", u2.getProducts(), supermarket.getShelvingUnits().get(1).getProducts());
-            assertEquals("The shelving units were not swapped", u1.getProducts(), supermarket.getShelvingUnits().get(2).getProducts());
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("The logged in user is not admin.", e.getMessage());
         }
         supermarket.logOut();
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
-            ShelvingUnit u1 = supermarket.getShelvingUnits().get(1);
-            ShelvingUnit u2 = supermarket.getShelvingUnits().get(2);
             supermarket.swapShelvingUnits(1, 2);
-            assertEquals("The shelving units were not swapped", u2.getProducts(), supermarket.getShelvingUnits().get(1).getProducts());
-            assertEquals("The shelving units were not swapped", u1.getProducts(), supermarket.getShelvingUnits().get(2).getProducts());
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("There is no logged in user.", e.getMessage());
         }
         supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
-            ShelvingUnit u1 = supermarket.getShelvingUnits().get(1);
-            ShelvingUnit u2 = supermarket.getShelvingUnits().get(2);
             supermarket.swapShelvingUnits(1, -2);
-            assertEquals("The shelving units were not swapped", u2.getProducts(), supermarket.getShelvingUnits().get(1).getProducts());
-            assertEquals("The shelving units were not swapped", u1.getProducts(), supermarket.getShelvingUnits().get(2).getProducts());
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
         }
         try {
-            supermarket.addProductToShelvingUnit(1,0, product1);
-            supermarket.addProductToShelvingUnit(2,1, product2);
-            ShelvingUnit u1 = supermarket.getShelvingUnits().get(1);
-            ShelvingUnit u2 = supermarket.getShelvingUnits().get(2);
             supermarket.swapShelvingUnits(-1, 2);
-            assertEquals("The shelving units were not swapped", u2.getProducts(), supermarket.getShelvingUnits().get(1).getProducts());
-            assertEquals("The shelving units were not swapped", u1.getProducts(), supermarket.getShelvingUnits().get(2).getProducts());
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
         }
-        supermarket.addProductToShelvingUnit(1,0, product1);
-        supermarket.addProductToShelvingUnit(2,1, product2);
-        ShelvingUnit u1 = supermarket.getShelvingUnits().get(1);
-        ShelvingUnit u2 = supermarket.getShelvingUnits().get(2);
         supermarket.swapShelvingUnits(1, 2);
         assertEquals("The shelving units were not swapped", u2.getProducts(), supermarket.getShelvingUnits().get(1).getProducts());
         assertEquals("The shelving units were not swapped", u1.getProducts(), supermarket.getShelvingUnits().get(2).getProducts());
@@ -661,17 +539,6 @@ public class SupermarketTest {
         supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
         try {
             supermarket.emptyShelvingUnit(1);
-            for(Product product : supermarket.getShelvingUnits().get(1).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
-            supermarket.emptyShelvingUnit(2);
-            for(Product product : supermarket.getShelvingUnits().get(2).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
-            supermarket.emptyShelvingUnit(0);
-            for(Product product : supermarket.getShelvingUnits().get(0).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("The logged in user is not admin.", e.getMessage());
@@ -679,17 +546,6 @@ public class SupermarketTest {
         supermarket.logOut();
         try {
             supermarket.emptyShelvingUnit(1);
-            for(Product product : supermarket.getShelvingUnits().get(1).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
-            supermarket.emptyShelvingUnit(2);
-            for(Product product : supermarket.getShelvingUnits().get(2).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
-            supermarket.emptyShelvingUnit(0);
-            for(Product product : supermarket.getShelvingUnits().get(0).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
             fail("Expected IllegalStateException, there should be no logged in user.");
         } catch (IllegalStateException e) {
             assertEquals("There is no logged in user.", e.getMessage());
@@ -697,17 +553,6 @@ public class SupermarketTest {
         supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
         try {
             supermarket.emptyShelvingUnit(-1);
-            for(Product product : supermarket.getShelvingUnits().get(1).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
-            supermarket.emptyShelvingUnit(20);
-            for(Product product : supermarket.getShelvingUnits().get(2).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
-            supermarket.emptyShelvingUnit(0);
-            for(Product product : supermarket.getShelvingUnits().get(0).getProducts()) {
-                assertNull("The shelving unit is not empty", product);
-            }
             fail("Expected IllegalArgumentException, the position is not valid.");
         } catch (IllegalArgumentException e) {
             assertEquals("The position is not correct", e.getMessage());
@@ -724,6 +569,46 @@ public class SupermarketTest {
         for(Product product : supermarket.getShelvingUnits().get(0).getProducts()) {
             assertNull("The shelving unit is not empty", product);
         }
+    }
+
+    @Test
+    public void testRemoveAllInstancesOfProduct() {
+        supermarket.createDistribution(2, distribution);
+        supermarket.addProductToShelvingUnit(1,0, product1);
+        supermarket.addProductToShelvingUnit(2,1, product2);
+        supermarket.addProductToShelvingUnit(2,0, product3);
+        supermarket.addProductToShelvingUnit(0,0, product1);
+        supermarket.addProductToShelvingUnit(0,1, product2);
+        supermarket.logOut();
+        supermarket.logIn(EMPLOYEE_NAME, EMPLOYEE_PASSWORD);
+        try {
+            supermarket.removeAllInstancesOfProduct(product1);
+            fail("Expected IllegalStateException, there should be no logged in user.");
+        } catch (IllegalStateException e) {
+            assertEquals("The logged in user is not admin.", e.getMessage());
+        }
+        supermarket.logOut();
+        try {
+            supermarket.removeAllInstancesOfProduct(product1);
+            fail("Expected IllegalStateException, there should be no logged in user.");
+        } catch (IllegalStateException e) {
+            assertEquals("There is no logged in user.", e.getMessage());
+        }
+        supermarket.logIn(ADMIN_NAME, ADMIN_PASSWORD);
+        try {
+            supermarket.removeAllInstancesOfProduct(null);
+            fail("Expected IllegalArgumentException, the product is not valid.");
+        } catch (IllegalArgumentException e) {
+            assertEquals("The product cannot be null", e.getMessage());
+        }
+        supermarket.removeAllInstancesOfProduct(product1);
+        assertNull(supermarket.getShelvingUnits().get(1).getProduct(0));
+        assertNull(supermarket.getShelvingUnits().get(0).getProduct(0));
+        supermarket.removeAllInstancesOfProduct(product2);
+        assertNull(supermarket.getShelvingUnits().get(0).getProduct(1));
+        assertNull(supermarket.getShelvingUnits().get(2).getProduct(1));
+        supermarket.removeAllInstancesOfProduct(product3);
+        assertNull(supermarket.getShelvingUnits().get(2).getProduct(0));
     }
 
 }
